# GeoAlgorithmStudy

./: .gitignore  CMakeLists.txt  DDGStructure.cpp  DDGStructure.h  MouseInteractorStyle.cpp  MouseInteractorStyle.h  QRenderWindow.cpp  QRenderWindow.h  QtDriver.cpp  QtDriver.h  README.md  RenderWindow.ui  RenderWindow.ui.autosave  Signals.h  ThirdLibraryPaths.cmake  VTKViewer.h  main.cpp
DDG/: Note of DDG.md  Solution of Exercise 2.md
tutorials/: 01_bottle.cpp  01_bottle.h
